--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -2,23 +2,18 @@
 
 <div class="home">
 
-  <div class="home__content">
+  <div class="home__content container">
 
-    <div class="home__content__info__primary container">
+    <div class="home__content__info__primary">
 
-      <h1 class="animate__animated animate__fadeInLeft">Nuestra Historia</h1>
-      <hr class="animate__animated animate__fadeInRight colored-line">
+      <section class="section-1">
+        <h2 class="sub-title"> ¿Quiénes somos?</h2>
+      </section>
 
-      <section>
-
-        <p>
-          Fundada en 2018 por el Ingeniero Gustavo Cancellieri, es una empresa de ingeniería civil dedicada a aprovechar más de 20 años de experiencia en la industria para brindar servicios excepcionales tanto a la industria como a la comunidad en general. Nuestra amplia cartera muestra una amplia gama de proyectos, cada uno ejecutado con el compromiso de cumplir y superar las expectativas del cliente.
-          En Basamento SRL creemos en el poder de las lecciones aprendidas. Valoramos los conocimientos adquiridos en proyectos anteriores y los utilizamos para informar nuestro enfoque y ofrecer resultados sobresalientes en cada nuevo esfuerzo. Nuestra trayectoria habla por sí sola y demuestra nuestra inquebrantable dedicación a la excelencia y la satisfacción del cliente.
-        </p>
-        <p>
-          En BASAMENTO SRL somos más que una simple empresa constructora: somos sus socios en la construcción de un futuro mejor. Ya sea que esté buscando soluciones innovadoras, una ejecución confiable o un servicio excepcional, puede contar con Basamento SRL para brindarlas.
-        </p>
-
+      <section class="section-2">
+        <app-card-animated />
+        <app-card-animated />
+        <app-card-animated />
       </section>
 
     </div>
