--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -9,39 +9,28 @@
       background-color: var(--color-secondary);
       border: none;
     }
+
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 
+    &__info__primary {
 
-    &__info__primary  {
       display: flex;
       flex-direction: column;
-      align-items: center;
 
-      h1 {
-        margin-top: 2.5rem;
-        font-size: 2rem;
-        font-weight: bold;
-        color: var(--color-primary);
-        text-align: center;
-        margin-bottom: 1rem;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+      .section-1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
       }
-      section {
-       p
-       {
-         margin-top: 2.5rem;
-         padding: 20px;
-         width: 55vw;
-         line-height: 2rem;
-       }
+
+      .section-2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
       }
     }
+
     &__info__secondary {
       .info-box {
         color: #ffffff;
@@ -52,14 +41,17 @@
         background-color: #0077B5;
         height: 25rem;
         width: 68.75rem;
+
         h2 {
           font-size: 1.8rem;
         }
+
         p {
           width: 85%;
           text-align: justify;
         }
       }
+
       margin-top: 10rem;
       margin-bottom: 2.5rem;
       display: flex;
@@ -70,8 +62,3 @@
   }
 
 }
-
-
-
-
-
