--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,10 +1,11 @@
 .header {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-size: cover;
   overflow: hidden; // Para recortar el video si es necesario
 
   video {
