--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,6 +58,18 @@ h1 {
 
 // ESTILOS GENERALES
 
+.sub-title {
+  padding: 1.2rem;
+  border-radius: 1.875rem;
+  letter-spacing: 0.15rem;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;;
+  background: linear-gradient(to right, var(--color-secondary), var(--color-secondary-light));
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .container {
   max-width: 80%;
   margin: 0 auto;
