--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,8 +66,8 @@ h1 {
   font-size: 1rem;
   font-weight: bold;;
   background: linear-gradient(to right, var(--color-secondary), var(--color-secondary-light));
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  // margin-top: 3rem;
+  // margin-bottom: 3rem;
 }
 
 .container {
@@ -82,6 +82,7 @@ h1 {
 .last-content {
   margin-bottom: 2.5rem;
 }
+
 
 .title-margin-bottom {
   margin-bottom: 3rem;
