--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -5,44 +5,43 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-size: cover;
-  overflow: hidden; // Para recortar el video si es necesario
+  overflow: hidden;
 
   video {
     position: absolute;
-    top: 50%; // Coloca el video en la mitad vertical
-    left: 0;
     width: 100%;
-    height: auto;
-    transform: translateY(-50%); // Centra verticalmente el video
+    height: 100vh;
+    transform: translateY(-12%);
     object-fit: cover;
-    // filter: blur(1.5px) grayscale(20%);
-    // opacity: 0.9;
   }
 
   h1,
   h4 {
     position: absolute;
-    z-index: 1; // Para que estén por encima del video
+    z-index: 1;
     text-align: center;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   }
 
-  h1 {
-    font-size: 3rem;
-    top: 40%; // Coloca el h1 en la mitad vertical
-    transform: translateY(-50%); // Centra verticalmente el h1
-    color:#ffff;
-  }
+.h1_title_1 {
+  font-size: 3rem;
+  letter-spacing: 0.8rem;
+  top: 35%;
+  transform: translateY(-50%);
+  color:#ffff;
+}
+.h1_title_2 {
+  font-size: 3rem;
+  letter-spacing: 0.8rem;
+  top: 47%;
+  transform: translateY(-50%);
+  color:#ffff;
+}
 
   h4 {
-    font-size: 1.5rem; // Tamaño de fuente del h4
-    top: calc(50% + 2rem); // Coloca el h4 2rem por debajo del h1
-    transform: translateY(-50%); // Centra verticalmente el h4
+    font-size: 1.5rem;
+    top: calc(47% + 5rem);
+    transform: translateY(-50%);
     color: #ffff;
   }
 }
-
-
-
-
