--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="home">
+<div class="home animate__animated animate__fadeIn">
 
   <img class="lio" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
