--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -1,10 +1,10 @@
 
 
-<div class="contacto content">
+<div class="contacto content animate__animated animate__fadeIn">
 
-  <h1 class="title-margin-bottom animate__animated animate__fadeIn">CONTACTO</h1>
+  <h1 class="title-margin-bottom">CONTACTO</h1>
 
-  <div class="contacto__content container animate__animated animate__fadeIn">
+  <div class="contacto__content container">
 
     <div class="contacto__content__info">
       <p>
