--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -7,7 +7,7 @@ img {
 
 input {
   font-size: 1rem;
-  width: 10rem;
+  // width: 10rem;
   height: 2rem;
   color: black;
   border-radius: 5rem;
@@ -20,7 +20,6 @@ input::placeholder {
 
 
 .error-message {
-  margin-left: 8rem;
   color: #F2FDFE;
   font-size: 1rem;
   margin-top: 0.1rem;
