--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -7,10 +7,10 @@
         </ng-template>
         <ng-template pTemplate="end">
           <span class="search material-symbols-outlined">search</span>
-          <input placeholder="explorar" type="text" pInputText [(ngModel)]="searchTerm" class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
-          <div class="error-message" [ngClass]="{'show-error': searchTermError && !searchTermFound}">
+          <input placeholder="explorar.." type="text" pInputText [(ngModel)]="searchTerm" class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
+          <!-- <div class="error-message" [ngClass]="{'show-error': searchTermError && !searchTermFound}">
             {{ searchTerm }}
-          </div>
+          </div> -->
         </ng-template>
       </p-menubar>
     </div>
