--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="contacto content animate__animated animate__fadeIn">
+<div class="contacto animate__animated animate__fadeIn content">
 
   <h1 class="title-margin-bottom">CONTACTO</h1>
 
