--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,17 +1,17 @@
 
-<div class="nosotros content animate__animated animate__fadeIn">
+<div class="nosotros animate__animated animate__fadeIn content">
 
-  <h1 class=" title-margin-bottom animate__animated animate__fadeIn"> NOSOTROS </h1>
+  <!-- <h1 class=" title-margin-bottom animate__animated animate__fadeIn"> NOSOTROS </h1> -->
 
-  <div class="container">
+  <div >
 
-    <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué Elegirnos? </h2>
-    <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
+    <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000" > ¿Por qué Elegirnos? </h2>
+    <!-- <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line"> -->
+
 
     <div class="nosotros__card">
       <div>
-        <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia"
-          [style]="{ width: '360px' }">
+        <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               real_estate_agent
@@ -25,8 +25,7 @@
       </div>
 
       <div>
-        <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería"
-          [style]="{ width: '360px' }">
+        <p-card class="p_card" header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               engineering
@@ -40,8 +39,7 @@
       </div>
 
       <div>
-        <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción"
-          [style]="{ width: '360px' }">
+        <p-card class="p_card" header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               workspace_premium
@@ -55,8 +53,7 @@
       </div>
 
       <div>
-        <p-card header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente"
-          [style]="{ width: '360px' }">
+        <p-card class="p_card" header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               heat_pump_balance
@@ -70,7 +67,7 @@
       </div>
 
       <div>
-        <p-card header="Innovación Tecnológica Avanzada" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
+        <p-card class="p_card" header="Innovación Tecnológica Avanzada" subheader="Vanguardia Tecnológica" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
@@ -88,7 +85,7 @@
 
     <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Quiénes somos?? </h2>
     <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
-    <div class="nosotros__info">
+    <div class="nosotros__info container">
       <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
           ingeniería </strong>
         y la <strong> construcción </strong>, tanto para obras privadas como industriales. Nuestro compromiso es ofrecer
@@ -115,7 +112,7 @@
       </video>
     </div>
 
-    <div class="nosotros__content">
+    <div class="nosotros__content container">
       <!-- <app-preguntas-frecuentes /> -->
       <h2 data-aos="zoom-out" data-aos-duration="1000">Preguntas Frecuentes</h2>
       <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
