--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,5 +1,5 @@
 
-<div class="servicios content">
+<div class="servicios">
 
   <h1 class="title-margin-bottom animate__animated animate__fadeIn">SERVICIOS</h1>
 
