--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -4,7 +4,7 @@
 
 <div class="home animate__animated animate__fadeIn">
 
-  <img class="lio" src="../../../../assets/imagenes/home/vectores/onda.svg">
+  <img class="vector" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
   <div class="home__content container">
 
