--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -12,7 +12,7 @@
   h2 {
     margin-bottom: 1rem;
     text-align: center;
-    font-size: 1.8rem;
+    margin-bottom: 3rem;
   }
   hr {
     width: 12rem;
@@ -27,7 +27,7 @@
   }
   &__card {
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-around;
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 15rem;
@@ -88,3 +88,5 @@
     }
   }
 }
+
+
