--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,8 +10,7 @@
   video {
     position: absolute;
     width: 100%;
-    height: 100vh;
-    transform: translateY(-12%);
+    height: 100%;
     object-fit: cover;
   }
 
