Actualizamos el video de inicio: PC

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -10,12 +10,11 @@
 
     <div class="home__content__info__primary">
 
-      <section class="section-1">
+      <section class="home__content__info__primary__section-1">
         <h2 class="sub-title"> ¿Quiénes somos?</h2>
-
       </section>
 
-      <section class="section-2">
+      <section class="home__content__info__primary__section-2">
 
         <div>
           <img src="../../../../assets/imagenes/home/vectores/fundada.svg" style="width: 15rem;">
@@ -26,7 +25,7 @@
         </div>
 
         <div>
-          <img src="../../../../assets/imagenes/home/vectores/cartera.svg" style="width: 15rem;">
+          <img src="../../../../assets/imagenes/home/vectores/cartera.svg" style="width: 18rem;">
           <p>Nuestra cartera muestra una <strong>amplia
             gama de proyectos</strong>, cada uno ejecutado
             con el compromiso de cumplir y <strong>superar
@@ -40,6 +39,15 @@
             innovadoras, ejecuciones confiables o
             <strong>servicios excepcionales.</strong></p>
         </div>
+      </section>
+
+      <section class="home__content__info__primary__section-3">
+
+        <div>
+          <img src="../../../../assets/imagenes/home/vectores/estrella.svg" style="width: 3rem;">
+          <p>Puede contar con <strong>Basamento SRL</strong>  para construir <br> sus <strong>mejores proyectos</strong></p>
+        </div>
+
       </section>
 
     </div>
@@ -66,4 +74,5 @@
     </div>
 
   </div>
+
 </div>
