--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,6 +12,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: blur(1px);
   }
 
   h1,
@@ -23,24 +24,29 @@
   }
 
 .h1_title_1 {
-  font-size: 3rem;
-  letter-spacing: 0.8rem;
+  font-size: 5.5rem;
+  letter-spacing: 0.3rem;
   top: 35%;
   transform: translateY(-50%);
   color:#ffff;
+  text-shadow: 2px 2px 4px #000000;
 }
 .h1_title_2 {
-  font-size: 3rem;
-  letter-spacing: 0.8rem;
-  top: 47%;
+  font-size: 6.5rem;
+  letter-spacing: 0.3rem;
+  top: 43%;
   transform: translateY(-50%);
   color:#ffff;
+  text-shadow: 2px 2px 4px #000000;
+
 }
 
   h4 {
-    font-size: 1.5rem;
-    top: calc(47% + 5rem);
+    font-size: 2.5rem;
+    top: calc(50% + 6.5rem);
     transform: translateY(-50%);
-    color: #ffff;
+    color: #FEBF07;
+    text-shadow: 2px 2px 4px #000000;
+
   }
 }
