actualizacion de las cards de nosotros: NOTEBOOK

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -11,7 +11,7 @@
 
     <div class="nosotros__card">
       <div>
-        <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               real_estate_agent
@@ -25,7 +25,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
+        <p-card class="p_card" header="Especialistas la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               engineering
@@ -39,7 +39,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
+        <p-card class="p_card" header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               workspace_premium
@@ -53,7 +53,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
+        <p-card class="p_card" header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               heat_pump_balance
@@ -67,7 +67,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Innovación Tecnológica Avanzada" subheader="Vanguardia Tecnológica" [style]= "{width: '270px', height: '495px', overflow: 'hidden'}">
+        <p-card class="p_card" header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
