agregamos boton de prueba en el home: PC

--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -3,6 +3,7 @@
   <h1 class="focus-in-contract-bck h1_title_1">Bienvenidos a </h1>
   <h1 class="focus-in-contract-bck h1_title_2"> BASAMENTO SRL </h1>
   <h4 class="text-focus-in">Ingeniería y Construcción</h4>
+  <button [hidden]="!showButton" class="animate__animated animate__bounceInDown"> hola </button>
 </div>
 
 
