--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -3,7 +3,8 @@
   .vector {
     display: flex;
     margin-left: auto;
-    width: 12%;
+    width: 10rem;
+    height: auto;
   }
 
   &__content {
