comenzamos de a poco con las medias queries: pc

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <shared-header></shared-header>
 
 <div class="home animate__animated animate__fadeIn">
-  
+
   <img class="vector" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
 
@@ -16,7 +16,7 @@
       <section class="home__content__info__primary__section-2">
 
         <div>
-          <img src="../../../../assets/imagenes/home/vectores/fundada.svg" style="width: 15rem;">
+          <img class="img-1" src="../../../../assets/imagenes/home/vectores/fundada.svg" style="width: 15rem;">
           <p>Fundada por el <strong>Ingeniero</strong> <br>
             <strong>Gustavo Cancellieri</strong>, es una
             empresa de ingeniería civil con
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-          <img src="../../../../assets/imagenes/home/vectores/cartera.svg" style="width: 18rem;">
+          <img class="img-2"  src="../../../../assets/imagenes/home/vectores/cartera.svg" style="width: 18rem;">
           <p>Nuestra cartera muestra una <strong>amplia
             gama de proyectos</strong>, cada uno ejecutado
             con el compromiso de cumplir y <strong>superar
@@ -32,7 +32,7 @@
         </div>
 
         <div>
-          <img src="../../../../assets/imagenes/home/vectores/confianza.svg" style="width: 15rem;">
+          <img class="img-3"  src="../../../../assets/imagenes/home/vectores/confianza.svg" style="width: 15rem;">
           <p>Somos sus <strong>socios en la construcción</strong>,
             ya sea que esté buscando soluciones
             innovadoras, ejecuciones confiables o
