--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -11,6 +11,10 @@
     position: absolute;
     font-size: 1rem;
     top: 65%;
+    @media screen and (max-width: 1400px) {
+      top: 60%;
+      font-size: 0.8rem;
+    }
   }
 
   video {
@@ -30,29 +34,42 @@
   }
 
 .h1_title_1 {
-  font-size: 5.5rem;
+  font-size: 5rem;
   letter-spacing: 0.3rem;
   top: 31%;
   transform: translateY(-50%);
   color:#ffff;
   text-shadow: 2px 2px 4px #000000;
+
+  @media screen and (max-width: 1400px) {
+    font-size: 4rem;
+  }
 }
 .h1_title_2 {
-  font-size: 6.5rem;
+  font-size: 6rem;
   letter-spacing: 0.3rem;
   top: 39%;
   transform: translateY(-50%);
   color:#ffff;
   text-shadow: 2px 2px 4px #000000;
 
+  @media screen and (max-width: 1400px) {
+    font-size: 5rem;
+  }
+
 }
 
   h4 {
-    font-size: 2.5rem;
-    top: calc(46% + 6.5rem);
+    font-size: 2rem;
+    top: calc(46% + 6rem);
     transform: translateY(-50%);
     color: #FEBF07;
     text-shadow: 2px 2px 4px #000000;
+
+    @media screen and (max-width: 1400px) {
+      font-size: 1.5rem;
+      top: calc(46% + 5rem);
+    }
 
   }
 }
@@ -113,6 +130,11 @@
   padding: 1rem 2rem;
   position: relative;
   text-transform: uppercase;
+
+  @media screen and (max-width: 1400px) {
+    padding: 0.7rem 1.3rem;
+  }
+
 }
 
 .btn-53 .original {
