--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -41,6 +41,19 @@
           img {
             margin-bottom: 2rem;
           }
+          p {
+            font-size: 0.9rem;
+          }
+          .img-1, .img-3 {
+            @media screen and (max-width: 1400px) {
+              width: 10rem !important;
+            }
+          }
+          .img-2 {
+            @media screen and (max-width: 1400px) {
+              width: 13rem !important;
+            }
+          }
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -58,10 +71,16 @@
         margin-top: 9rem;
         img {
           margin-bottom: 1rem;
+          @media screen and (max-width: 1400px) {
+            width: 2.5rem !important;
+          }
         }
         p {
           color: var(--color-primary-light);
           font-size: 2rem;
+          @media screen and (max-width: 1400px) {
+            font-size: 1.5rem !important;
+          }
         }
       }
     }
