--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,11 @@ h1 {
   font-size: 1.5rem;
   font-weight: bold;;
   background: linear-gradient(to right, var(--color-secondary), var(--color-secondary-light));
+
+  @media screen and (max-width: 1400px) {
+    font-size: 1rem;
+    padding: 1rem;
+  }
 }
 
 .container {
@@ -189,6 +194,10 @@ h1 {
   font-size: 1.3rem;
   height: 6.5rem;
   border-radius: 0;
+
+  @media screen and (max-width: 1400px) {
+    font-size: 1rem;
+  }
 
   img {
     margin-right: 3rem;
