--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -44,16 +44,16 @@
           p {
             font-size: 0.9rem;
           }
-          .img-1, .img-3 {
-            @media screen and (max-width: 1400px) {
-              width: 10rem !important;
-            }
-          }
-          .img-2 {
-            @media screen and (max-width: 1400px) {
-              width: 13rem !important;
-            }
-          }
+          // .img-1, .img-3 {
+          //   @media screen and (max-width: 1400px) {
+          //     width: 10rem !important;
+          //   }
+          // }
+          // .img-2 {
+          //   @media screen and (max-width: 1400px) {
+          //     width: 13rem !important;
+          //   }
+          // }
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -71,16 +71,18 @@
         margin-top: 9rem;
         img {
           margin-bottom: 1rem;
-          @media screen and (max-width: 1400px) {
-            width: 2.5rem !important;
-          }
+
+          // @media screen and (max-width: 1400px) {
+          //   width: 2.5rem !important;
+          // }
         }
         p {
           color: var(--color-primary-light);
           font-size: 2rem;
-          @media screen and (max-width: 1400px) {
-            font-size: 1.5rem !important;
-          }
+
+          // @media screen and (max-width: 1400px) {
+          //   font-size: 1.5rem !important;
+          // }
         }
       }
     }
