--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,15 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
 
 html {
   font-size: 100%;
+
+  @media screen and (max-width: 1400px) {
+    font-size: 80%;
+  }
 }
+
+
+
+
 
 body {
   font-size: 1rem;
