--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,10 @@ html {
   @media screen and (max-width: 1400px) {
     font-size: 80%;
   }
+
+  @media screen and (max-width: 600px) {
+    font-size: 40%;
+  }
 }
 
 
