--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,11 +63,11 @@ html {
   @media screen and (max-width: 600px) {
     font-size: 40%;
   }
+
+  @media screen and (max-width: 400px) {
+    font-size: 30%;
+  }
 }
-
-
-
-
 
 body {
   font-size: 1rem;
