--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -24,11 +24,16 @@
       flex-direction: column;
 
       &__section-1 {
-        margin-top: 5rem;
-        margin-bottom: 5rem;
+        margin-top: 8rem;
+        margin-bottom: 8rem;
         display: flex;
         flex-direction: row;
         justify-content: center;
+
+        @media screen and (max-width: 1400px) {
+          margin-top: 5rem;
+          margin-bottom: 5rem;
+        }
       }
 
       &__section-2 {
@@ -37,12 +42,28 @@
         flex-direction: row;
         justify-content: space-between;
 
+        .img-1, .img-3 {
+          @media screen and (max-width: 1200px) {
+            width: 12rem !important;
+          }
+        }
+        .img-2 {
+          @media screen and (max-width: 1200px) {
+            width: 15rem !important;
+          }
+        }
+
         div {
+
           img {
             margin-bottom: 2rem;
           }
           p {
-            font-size: 0.9rem;
+            font-size: 1rem;
+            @media screen and (max-width: 1200px) {
+              font-size: 0.9rem;
+              width: 12rem;
+            }
           }
           display: flex;
           flex-direction: column;
@@ -58,7 +79,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        margin-top: 9rem;
+        margin-top: 15rem;
         img {
           margin-bottom: 1rem;
         }
@@ -95,12 +116,13 @@
         }
       }
 
-      margin-top: 9rem;
+      margin-top: 15rem;
       margin-bottom: 2.5rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-evenly;
+
     }
   }
 
