--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,19 +1,70 @@
+// .header {
+//   position: relative;
+//   width: 100%;
+//   height: 100vh;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   overflow: hidden;
+
+//   button {
+//     position: absolute;
+//     font-size: 1rem;
+//     top: 65%;
+//   }
+
+//   video {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//     filter: blur(1px);
+//   }
+
+//   h1,
+//   h4 {
+//     position: absolute;
+//     z-index: 1;
+//     text-align: center;
+//     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+//   }
+
+// .h1_title_1 {
+//   font-size: 5rem;
+//   letter-spacing: 0.3rem;
+//   top: 31%;
+//   transform: translateY(-50%);
+//   color:#ffff;
+//   text-shadow: 2px 2px 4px #000000;
+// }
+// .h1_title_2 {
+//   font-size: 6rem;
+//   letter-spacing: 0.3rem;
+//   top: 39%;
+//   transform: translateY(-50%);
+//   color:#ffff;
+//   text-shadow: 2px 2px 4px #000000;
+// }
+
+//   h4 {
+//     font-size: 2rem;
+//     top: calc(46% + 6rem);
+//     transform: translateY(-50%);
+//     color: #FEBF07;
+//     text-shadow: 2px 2px 4px #000000;
+//   }
+// }
+
+
 .header {
   position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
   overflow: hidden;
 
-  button {
-    position: absolute;
-    font-size: 1rem;
-    top: 65%;
-  }
-
-  video {
+    video {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -21,39 +72,44 @@
     filter: blur(1px);
   }
 
-  h1,
-  h4 {
+  &__content {
     position: absolute;
-    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
     text-align: center;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  }
 
-.h1_title_1 {
-  font-size: 5rem;
-  letter-spacing: 0.3rem;
-  top: 31%;
-  transform: translateY(-50%);
-  color:#ffff;
-  text-shadow: 2px 2px 4px #000000;
-}
-.h1_title_2 {
-  font-size: 6rem;
-  letter-spacing: 0.3rem;
-  top: 39%;
-  transform: translateY(-50%);
-  color:#ffff;
-  text-shadow: 2px 2px 4px #000000;
-}
+    &__title-1 {
+        font-size: 4rem;
+        letter-spacing: 0.3rem;
+        color:#ffff;
+        text-shadow: 2px 2px 4px #000000;
+    }
+    &__title-2 {
+          font-size: 5rem;
+          letter-spacing: 0.3rem;
+          color:#ffff;
+          text-shadow: 2px 2px 4px #000000;
+    }
+    &__subtitle {
+        font-size: 2rem;
+        color: #FEBF07;
+        text-shadow: 2px 2px 4px #000000;
+        margin-bottom: 3rem;
 
-  h4 {
-    font-size: 2rem;
-    top: calc(46% + 6rem);
-    transform: translateY(-50%);
-    color: #FEBF07;
-    text-shadow: 2px 2px 4px #000000;
+    }
+
+  }
+  &__btn-container {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
+
+
+
 
 // ESTILOS BOTON
 
@@ -69,18 +125,13 @@
 
 .btn-53 {
   -webkit-tap-highlight-color: transparent;
-  // -webkit-appearance: button;
   background-color: #000;
   background-image: none;
   color: #fff;
   cursor: pointer;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 100%;
   line-height: 1.5;
   margin: 0;
-  // -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
   padding: 0;
 }
 
@@ -94,7 +145,6 @@
 
 .btn-53 svg {
   display: block;
-  // vertical-align: middle;
 }
 
 .btn-53 [hidden] {
@@ -105,23 +155,15 @@
   border: 1px solid;
   border-radius: 999px;
   box-sizing: border-box;
-  // display: block;
   font-weight: 900;
   overflow: hidden;
   padding: 1rem 2rem;
-  position: relative;
   text-transform: uppercase;
-
-  // @media screen and (max-width: 1400px) {
-  //   padding: 0.7rem 1.3rem;
-  // }
-
 }
 
 .btn-53 .original {
   background: #fff;
   color: #000;
-  display: grid;
   inset: 0;
   place-content: center;
   position: absolute;
